Weather-App-end/k8s/manifests/service.yaml
#Service for the application
apiVersion: v1
kind: Service
metadata:
  name: weather-app
spec:
  selector:
    app: weather-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: weather-app
  type: ClusterIP
